plugins {
	id 'org.springframework.boot' version '2.6.4'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
}

group = 'co.javeriana'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '16'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework:spring-orm:5.2.2.RELEASE'
	implementation 'org.apache.tomcat:tomcat-dbcp:9.0.29'
	implementation 'org.hibernate:hibernate-core:5.4.9.Final'
	implementation 'org.mariadb.jdbc:mariadb-java-client:2.7.2'
	implementation 'org.springframework.boot:spring-boot-starter-amqp'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.5.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
}

tasks.named('test') {
	useJUnitPlatform()
}